2008-10-15  Jonathon Jongsma  <jonathon@quotidian.org>

	* configure.in: add all of the _LIBS and _CFLAGS for those features that are
	supported (e.g. FT, PNG, PDF, etc) to the cairomm build flags/libs.

2008-10-15  Jonathon Jongsma  <jonathon@quotidian.org>

	* configure.in: bump required cairo version to 1.8.0

2008-10-09  Armin Burgmeier  <armin@openismus.com>

	* MSVC_Net2005/cairomm/cairomm.vcproj: Changed output file names to
	cairomm-vc80-1_0.dll or cairomm-vc80-d-1_0.dll, respectively.

	* MSVC_Net2008/cairomm.sln:
	* MSVC_Net2008/cairomm.rc.in:
	* MSVC_Net2008/Makefile.am:
	* MSVC_Net2008/*/*.vcproj: Added necesseary files for a Visual Studio
	2008 build.

	* configure.in:
	* Makefile.am: Added the VS 2008 project files to the distribution.

2008-10-10  Jonathon Jongsma  <jonathon@quotidian.org>

	* configure.in:
	* Makefile.am:
	* cairomm-**.pc.in:
	Add a bunch of extra .pc files for additional functionality

	This is done in a bit of a brute-force method at the moment.  I have .pc.in
	templates for all possible files.  Then I check the underlying cairo-XXX.p
	files and if those exist, I generate the corresponding cairomm-XXX.pc file
	It's not the prettiest solution, but it seems to work.
	So now, if you want to just use base cairo functionality, check for cairom
	but if you want to use other functionality that requires that you link you
	application against other libraries (e.g. freetype, xlib, etc), you should
	for cairomm-ft-1.0, cairomm-xlib-1.0, etc.

2008-10-07  Jonathon Jongsma  <jonathon@quotidian.org>

	* configure.in: add library version numbers to the cairommconfig.h file:
	CAIROMM_MAJOR_VERSION, CAIROMM_MINOR_VERSION, and CAIROMM_MICRO_VERSION

2008-10-07  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/context.cc:
	* cairomm/context.h: remove has_show_text_glyphs() (moved to Surface)
	* cairomm/surface.cc:
	* cairomm/surface.h: added has_show_text_glyphs() (moved from Context)